--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+## Changelog #3
+ - Checked and changed: BoardConfig.mk
+ - Everything ready
+
 ## Changelog #2
  - Checked and changed:
    + AndroidBoard.mk
